[project]
name = "julia-mcp"
version = "0.1.0"
description = "MCP server for running Julia code in persistent REPL sessions"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
julia-mcp = "server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

